@@ -1,6 +1,6 @@
 New Features and Important Changes in GammaLib 1.2.0
 
-25 January 2017
+26 January 2017
 
 
 1. Introduction
@@ -174,6 +174,9 @@ The GModelTemporalFunc class has been added to implement a temporal file
 function for the simulation of transient sources. A unit test has been
 added and the mc() and eval() methods have been validated using a dedicated
 test script (#1914).
+
+Improve the exception message for empty map cubes in GModelSpatialDiffuseCube::mc
+(#1915).
 
 
 9. Numerics module
