@@ -1,8 +1,9 @@
-2017-01-25
+2017-01-26
 
         * Version 1.2.0 released
         =========================
 
+        Improve exception message in GModelSpatialDiffuseCube::mc (#1915)
         Add GModelTemporalFunc call (#1914)
         Add GSkyMap FITS HDU constructor
         Add leap second for 1-1-2017 (#1887)
